[project]
name = "seviper"
description = "A simple and easy to use library to catch and handle exceptions."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Leon Haffmans", email = "leon.haffmans@hochfrequenz.de" }]
keywords = ["error-handling", "aiostream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiostream"
]     # add all the dependencies here
dynamic = ["readme", "version"]

[project.optional-dependencies]

coverage = [
    "coverage==7.6.1"
]
formatting = [
    "black==24.8.0",
    "isort==5.13.2"
]
linting = [
    "pylint==3.3.0"
]
spellcheck = [
    "codespell==2.3.0"
]
test_packaging = [
    "build==1.2.2",
    "twine==5.1.1"
]
tests = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0"
]
type_check = [
    "mypy==1.11.2"
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/seviper/releases"
Homepage = "https://github.com/Hochfrequenz/seviper"

[tool.black]
line-length = 120
target_version = ["py312"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"



[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_error_handler_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
